--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ Version: 1.0
     display: none;
   }
   .myborder {
-    width: 40%;
+    width: 10%;
     height: 8px;
     background: rgb(18, 134, 51);
     margin: 2% auto;
@@ -169,9 +169,9 @@ header h2 {
   font-size: 25px;
 }
 .arrow {
+  color: white;
   width: 38px;
   height: 38px;
-  background-image: url(../Img/down-arrow2.png);
   animation: bounce 2s infinite;
   margin-left: 30%;
   margin-top: 100%;
