--- a/css/style.css
+++ b/css/style.css
@@ -343,8 +343,32 @@ footer {
   justify-content: space-around;
 }
 .top-footer {
-  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  height: 45vh;
   background: #202324;
+}
+iframe {
+  margin-top: 5vh;
+  width: 100%;
+  height: 30vh;
+}
+.icons {
+  width: 20%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2vh;
+}
+.icons a {
+  color: white;
+  transition: 0.4s;
+}
+.icons a:hover {
+  color: rgb(28, 190, 74);
+  transform: scale(1.1);
 }
 .bottom-footer{
   text-align: center;
