--- a/css/media.css
+++ b/css/media.css
@@ -111,4 +111,21 @@
   .info p {
     font-size: 21px;
   }
+  .icons {
+    width: 40vw;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .contact-cards {
+    flex-direction: row;
+  }
+  .info-holder {
+    width: calc(30% - 20px);
+  }
+  .contact-form {
+    margin-top: 2%;
+  }
+  .right-info-content {
+    font-size: 1.4em;
+  }
 }
