--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,99 @@ article {
   filter: grayscale(0%);
 }
 /* Galeria */
+/* Kontakt */
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.contact h1 {
+  margin-top: 3%;
+}
+.contact-cards {
+ width: 100%;
+ display: flex;
+ flex-direction: column;
+ justify-content: space-around;
+ align-items: center;
+}
+.info-holder {
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  height: 160px;
+  background-color: #353b48;
+  color: #fff;
+  text-align: center;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: .3s linear;
+  margin-top: 3%;
+}
+.left-info-content {
+ background: rgb(18, 134, 51);
+ width:30%;
+ height: 160px;
+ justify-self: flex-start;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ transition: .4s;
+}
+.right-info-content {
+  font-size: 0.8em;
+ background: white;
+ color: black;
+ width: 70%;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ text-align: center;
+}
+.info-holder:hover > .left-info-content {
+  background: rgb(28, 190, 74);
+}
+.contact-form{
+  width: 98%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.contact-form input, .contact-form textarea{
+  width: 100%;
+  height: 50px;
+  margin: 10px 0;
+  background-color: white;
+  border: none;
+  outline: none;
+  padding: 20px;
+  border-radius: 4px;
+  color: #fff;
+}
+.contact-form .btn{
+  width: 180px;
+  background-color: transparent;
+  color: rgb(18, 134, 51);
+  font-size: 16px;
+  border: 2px solid rgb(18, 134, 51);
+  padding: 0;
+  margin-right: auto;
+  cursor: pointer;
+  transition: .3s linear;
+}
+.contact-form .btn:hover{
+  background-color: rgb(28, 190, 74);
+  color: #fff;
+}
+.nameZone, .emailZone{
+  max-width: calc(50% - 10px);
+}
+.messageZone{
+  min-height: 200px;
+  resize: vertical;
+}
+/* Kontakt */
 /* Footer */
 footer {
   display: flex;
@@ -363,7 +456,7 @@ iframe {
   height: 30vh;
 }
 .icons {
-  width: 20%;
+  width: 80vw;
   display: flex;
   justify-content: space-between;
   margin-top: 2vh;
