--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,12 @@ Version: 1.0
   .goTop:hover {
     line-height: 20px;
   }
+  main span,aside span, .gallery span, .contact span {
+    font-size: 35px;
+  }
+  .gallery span {
+    margin-top: 2%;
+  }
   .myborder {
     width: 25vw;
     height: 8px;
@@ -269,7 +275,7 @@ article {
   position: absolute;
   align-self: flex-end;
 }
-.slider h1 {
+.slider span {
   transition: 2s;
   font-size: 40px;
 }
@@ -277,7 +283,7 @@ article {
   height: 60vh;
   animation: none;
 }
-.article-content:hover > .slider h1 {
+.article-content:hover > .slider span {
   display: none;
 }
 .info {
@@ -296,7 +302,7 @@ article {
 .info p {
   font-size: 12px;
 }
-.info h1, .info p, .info a {
+.info span, .info p, .info a {
   margin: 0;
   margin: 2%;
 }
@@ -320,7 +326,7 @@ article {
   z-index: 999;
 }
 /* Galeria */
-.container-fluid h1 {
+.container-fluid span {
   color: black;
 }
 .gallery{
@@ -331,9 +337,6 @@ article {
   align-items: center;
   justify-content: center;
   text-align: center;
-}
-.gallery h1 {
-  margin-top: 2%;
 }
 .gallery img {
   margin: 3% 1% 3%;
@@ -355,7 +358,7 @@ article {
   justify-content: center;
   align-items: center;
 }
-.contact h1 {
+.contact span {
   margin-top: 3%;
 }
 .contact-cards {
