--- a/css/style.css
+++ b/css/style.css
@@ -424,7 +424,7 @@ article {
   outline: none;
   padding: 20px;
   border-radius: 4px;
-  color: #fff;
+  color: black;
 }
 .contact-form .btn{
   width: 180px;
