--- a/css/style.css
+++ b/css/style.css
@@ -25,65 +25,67 @@ Version: 1.0
   input[type=number] {
     -moz-appearance: textfield;
   }
-  .goTop{
-    position: fixed;
-    z-index: 999;
-    bottom: 40px;
-    right: 40px;
-    width: 40px;
-    height: 40px;
-    background: rgb(18, 134, 51);
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    color: #fff;
-    outline: none;
-    display: none;
-    text-align: center;
-    line-height: 40px;
-    transition: 0.5s;
-  }
-  .goTop:hover {
+#go2Top {
+  position: fixed;
+  z-index: 999;
+  bottom: 40px;
+  right: 40px;
+  width: 40px;
+  height: 40px;
+  background-color: rgb(18, 134, 51);
+  border: none;
+  box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  cursor: pointer;
+  color: #fff;
+  outline: none;
+  line-height: 40px;
+  transition-duration: 0.6s;
+  display: flex;
+  justify-content: center;
+  opacity: 0;
+}
+#go2Top:hover {
     line-height: 20px;
-  }
-  main span,aside span, .gallery h2, .contact span {
-    font-size: 35px;
-  }
-  .gallery h2 {
-    margin-top: 2%;
-  }
-  .myborder {
-    width: 25vw;
-    height: 8px;
-    background: rgb(18, 134, 51);
-    margin: 2% auto;
-    outline: 0;
-    border: 0 !important;
-  }
-  .dark{
-    background: #2d3436;
-    color: white;
-  }
-  .dark .section-title{
-    color: #f1f1f1;
-  }
-  .dark .section-title::before{
-    background-color: #f1f1f1;
-  }
-  .dark .section-title::after{
-    border: 4px solid #353b48;
-  }
-  /* Scrollbar */
-  ::-webkit-scrollbar{
-    width: 10px;
-    background-color: #f1f1f1;
-  }
-  ::-webkit-scrollbar-track {
-    background-color: white;
-  }
-  ::-webkit-scrollbar-thumb {
-    background-color: #353b48;
-  }
+}
+main span,aside span, .gallery h2, .contact span {
+  font-size: 35px;
+}
+.gallery h2 {
+  margin-top: 2%;
+}
+.myborder {
+  width: 25vw;
+  height: 8px;
+  background: rgb(18, 134, 51);
+  margin: 2% auto;
+  outline: 0;
+  border: 0 !important;
+}
+.dark{
+  background: #2d3436;
+  color: white;
+}
+.dark .section-title{
+  color: #f1f1f1;
+}
+.dark .section-title::before{
+  background-color: #f1f1f1;
+}
+.dark .section-title::after{
+  border: 4px solid #353b48;
+}
+/* Scrollbar */
+::-webkit-scrollbar{
+  width: 10px;
+  background-color: #f1f1f1;
+}
+::-webkit-scrollbar-track {
+  background-color: white;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #353b48;
+}
   /* Scrollbar */
   /* Menu */
 nav{
