--- a/css/style.css
+++ b/css/style.css
@@ -339,6 +339,7 @@ article {
   align-items: center;
   justify-content: center;
   text-align: center;
+  margin-bottom: 3.5%
 }
 .gallery img {
   margin: 3% 1% 3%;
