--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* 
 Theme Name: California
-Author: SSzymon Gutt - IT CROWD
+Author: Szymon Gutt - IT CROWD
 Description: Funkcjonalny i responsywny szablon CMS
 Version: 1.0
 */
