--- a/css/style.css
+++ b/css/style.css
@@ -565,7 +565,7 @@ iframe {
     position: fixed;
     height: 100vh;
     width: 75%;
-    background-color: #353b48;
+    background: #2d3436;
     top: 0;
     right: -100%;
     max-width: 400px;
