--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,7 @@ main img {
   height: 250px;
   border-radius: 50%;
   object-fit: cover;
+  justify-self: flex-start;
 }
 /* Main */
 /* Blog */
