--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ nav{
 /* Header */
 header {
     height: 100vh;
-    background: url(../img/banner.jpg);
+    background: url(../img/domn.jpg);
     background-attachment: fixed;
     background-size: cover;
     display: flex;
